# mxChat

./: .gitignore  CMakeLists.txt  README.md  dump.rdb  pack.sh
benchmark/: CMakeLists.txt  benchmark4StatusServer.cc
config/: ServicePool.yaml  database.yaml  server.yaml
data/: users.db
include/: Singleton.h  global.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  msg.hpp
include/Client/: BubbleWidget.h  Client.h  HttpMgr.h  LeftNavButtonFactory.hpp  Login.h  MainWidget.h  MessageWidget.h  Regist.h  Regist.ui  RpcClient.h  SessionItem.hpp  SessionManager.h  TcpMgr.h  UserMgr.h
include/DataBase/: ChatDataBase.h  DataBaseServer.h  MySqlPool.hpp  MysqlDao.hpp  MysqlMgr.h  RedisMgr.h
include/Server/: AsioIOServicePool.h  CServer.h  CSession.h  GateLogic.h  GateServer.h  HttpConnection.h  HttpServer.h  LogicSystem.h  MsgNode.h  RpcServer.h  Server.h  StatusGrpcClient.hpp  StatusMonitor.h  StatusServiceImpl.h  UserMgr.h  VarifyGrpcClient.h  config.hpp  const.h
resources/: Login.qrc
script/Mysql/procedure/: check_pwd.sql  reg_user.sql
src/: CMakeLists.txt
src/ChatClient/: BubbleWidget.cpp  CMakeLists.txt  DataBaseClient.cpp  DataBaseServer.cpp  HttpMgr.cpp  Login.cpp  MainWidget.cpp  MessageWidget.cpp  Regist.cpp  RpcClient.cpp  SessionManager.cpp  TcpMgr.cpp  UserMgr.cpp  config.hpp  main.cpp
src/ChatServer/: AsioIOServicePool.cpp  CMakeLists.txt  CServer.cpp  CSession.cpp  ChatDataBase.cpp  ChatServer.cpp  HttpConnection.cpp  HttpServer.cpp  LogicSystem.cpp  MysqlMgr.cpp  RedisMgr.cpp  RpcServer.cpp  StatusMonitor.cpp  StatusServer.cpp  StatusServiceImpl.cpp  UserMgr.cpp  main.cpp  yamlReader.hpp
src/GateServer/: CMakeLists.txt  Gate.cpp  GateLogic.cpp  GateServer.cpp
src/web/: CMakeLists.txt  database.hpp  main.cpp  routes.cpp  routes.hpp  utils.hpp
src/web/templates/: chat.html
static/: index.css
templates/: index.html  reset-password.html
varifyServer/: config.js  config.json  const.js  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  package-lock.json  package.json  redis.js  server.js
